resources/dsaas/dsaas-production/tenant-log-indirector.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: tenant-log-indirector
spec:
  host: tenant-log-indirector-dsaas-production.09b5.dsaas.openshiftapps.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: tenant-log-indirector
    weight: 100
  wildcardPolicy: None
